cmake_minimum_required(VERSION 3.24)
project(Leetcode_2024)

set(CMAKE_CXX_STANDARD 17)

add_executable(Leetcode_2024
        main_857.cpp main_1491.cpp main_1235.cpp main_1652.cpp main_741.cpp main_1463.cpp main_2079.cpp main_2105.cpp main_2960.cpp main_2391.cpp main_1553.cpp main_994.cpp main_2244.cpp)
