cmake_minimum_required(VERSION 3.24)
project(Leetcode_2024)

set(CMAKE_CXX_STANDARD 20)

add_executable(Leetcode_2024
        main_857.cpp main_1491.cpp main_1235.cpp main_1652.cpp main_741.cpp main_1463.cpp main_2079.cpp main_2105.cpp main_2960.cpp main_2391.cpp main_1553.cpp main_994.cpp main_2244.cpp main_2589.cpp main_1953.cpp main_826.cpp main_2644.cpp main_1535.cpp main_1542.cpp main_2769.cpp main_2225.cpp main_2831.cpp 周赛397/main_01.cpp 周赛397/main_02.cpp 周赛397/main_03.cpp main_1673.cpp main_2903.cpp 双周赛131/main_01.cpp 双周赛131/main_03.cpp 双周赛131/main_02.cpp main_1738.cpp main_2028.cpp main_2951.cpp main_2981.cpp main_285.cpp main_349.cpp main_369.cpp main_500.cpp main_2982.cpp main_2965.cpp main_575.cpp main_1103.cpp main_2928.cpp main_3067.cpp main_3072.cpp main_2938.cpp main_3038.cpp main_3040.cpp main_312.cpp main_881.cpp main_419.cpp main_2806.cpp main_2813.cpp main_2786.cpp)
